[package]
name = "ex_base58"
version = "0.1.0"
authors = []
edition = "2018"

[lib]
name = "ex_base58"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.36"
bs58 = { version = "0.5", features = ["check"] }

[features]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
